[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Menu_screens/MenuScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/press-start-2p/PressStart2P.ttf.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VboxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -20.0
margin_right = 134.0
margin_bottom = 20.0

[node name="Start_button" type="Button" parent="VboxContainer"]
margin_right = 268.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Level Select"

[node name="Button" type="Button" parent="VboxContainer"]
margin_top = 26.0
margin_right = 268.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Begone THOT"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="VboxContainer/Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="pressed" from="VboxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
